--- a/Brand recognition/Testing using camera.ipynb
+++ b/Brand recognition/Testing using camera.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1KSjMQNzZ6to8lyoPGrS16g83jcpa7qGS",
-      "authorship_tag": "ABX9TyMyStNZ3yeT5U6hfhPZ6tkA",
+      "authorship_tag": "ABX9TyPkaUbKohzL8ApVdpZ2iZyU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,63 +24,98 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sarveshssk/Machine-learning/blob/main/Testing%20using%20camera.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sarveshssk/Machine-learning/blob/main/Brand%20recognition/Testing%20using%20camera.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "import cv2\n",
+        "from IPython.display import display\n",
+        "from PIL import Image as PILImage\n",
+        "import IPython.display\n",
         "import numpy as np\n",
         "import tensorflow as tf\n",
-        "import matplotlib.pyplot as plt\n",
-        "import cv2\n",
         "\n",
-        "# Load the model\n",
-        "cnn = tf.keras.models.load_model('/content/drive/MyDrive/snacks/snacks_model.h5')\n",
+        "# Load your pre-trained model\n",
+        "model = tf.keras.models.load_model(r\"C:\\Users\\ASUS\\brand_recognition.h5\")\n",
+        "\n",
+        "# Define class names based on your dataset\n",
+        "class_names = ['Cinthol Soap',\n",
+        " 'Dettol Soap',\n",
+        " 'Doritos Cheese Flavour',\n",
+        " 'Doritos Flaming Hot',\n",
+        " 'Doritos Sweet Chilli Flavour',\n",
+        " 'Dove Shampoo',\n",
+        " 'Fortune Oil',\n",
+        " 'Head&Shoulder Shampoo',\n",
+        " 'Lays Classic Salted',\n",
+        " 'Lays Magic Masala',\n",
+        " 'Lays Spanish Tomato Tango',\n",
+        " 'Loreal shampoo',\n",
+        " 'Nestle Maggie',\n",
+        " 'Patanjali Washing Bar',\n",
+        " 'Pears Soap',\n",
+        " 'Rin Washing powder',\n",
+        " 'Sunny Oil',\n",
+        " 'Surf excel washing bar',\n",
+        " 'SurfExcel',\n",
+        " 'Tide Washing Powder',\n",
+        " 'Vim bar' ]  # Update these according to your dataset]  # Update these according to your dataset\n",
+        "unknown_class_name = \"Unknown\"  # Name for unknown predictions\n",
+        "confidence_threshold = 0.9  # Set your confidence threshold\n",
         "\n",
         "# Initialize the camera\n",
-        "cap = cv2.VideoCapture(0)  # 0 is usually the default camera\n",
+        "cap = cv2.VideoCapture(1)\n",
+        "\n",
         "if not cap.isOpened():\n",
-        "    print(\"Error: Could not open camera.\")\n",
+        "    print(\"Error: Could not open webcam.\")\n",
+        "    cap.release()\n",
         "    exit()\n",
         "\n",
-        "while True:\n",
-        "    ret, frame = cap.read()\n",
-        "    if not ret:\n",
-        "        print(\"Failed to grab frame.\")\n",
-        "        break\n",
+        "try:\n",
+        "    while True:\n",
+        "        # Capture frame-by-frame\n",
+        "        ret, frame = cap.read()\n",
+        "        if not ret:\n",
+        "            print(\"Failed to grab frame.\")\n",
+        "            break\n",
         "\n",
-        "    # Resize the frame to the size expected by the model (64x64 in this case)\n",
-        "    img = cv2.resize(frame, (64, 64))\n",
+        "        # Resize and preprocess frame for model prediction\n",
+        "        img = cv2.resize(frame, (64, 64))  # Adjust to your model's input size\n",
+        "        img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+        "        input_arr = np.expand_dims(img_rgb, axis=0)  # Model expects a batch of images\n",
         "\n",
-        "    # Convert the frame to RGB format for compatibility with model\n",
-        "    img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+        "        # Make prediction\n",
+        "        predictions = model.predict(input_arr)\n",
+        "        max_confidence = np.max(predictions)\n",
+        "        result_index = np.argmax(predictions)\n",
         "\n",
-        "    # Prepare the image for prediction\n",
-        "    input_arr = tf.keras.preprocessing.image.img_to_array(img_rgb)\n",
-        "    input_arr = np.array([input_arr])  # Convert single image to a batch\n",
+        "        # Determine the predicted class or unknown\n",
+        "        if max_confidence < confidence_threshold:\n",
+        "            class_name = unknown_class_name\n",
+        "        else:\n",
+        "            class_name = class_names[result_index]\n",
         "\n",
-        "    # Make prediction\n",
-        "    predictions = cnn.predict(input_arr)\n",
-        "    result_index = np.argmax(predictions)\n",
+        "        # Display the predicted class on the frame\n",
+        "        cv2.putText(frame, f\"It's a {class_name} (Confidence: {max_confidence:.2f})\",\n",
+        "                    (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 0, 0), 2, cv2.LINE_AA)\n",
         "\n",
-        "    # Display the predicted class on the live feed\n",
-        "    class_name = \"Unknown\"\n",
-        "    if hasattr(test_set, 'class_names'):\n",
-        "        class_name = test_set.class_names[result_index]\n",
+        "        # Convert the frame (BGR) to RGB for display\n",
+        "        rgb_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+        "        pil_im = PILImage.fromarray(rgb_frame)\n",
+        "        IPython.display.clear_output(wait=True)\n",
+        "        display(pil_im)\n",
         "\n",
-        "    cv2.putText(frame, f\"It's a {class_name}\", (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 0, 0), 2, cv2.LINE_AA)\n",
+        "        # Break the loop by pressing 'q' key\n",
+        "        key = cv2.waitKey(1) & 0xFF\n",
+        "        if key == ord('q'):\n",
+        "            break\n",
         "\n",
-        "    # Show the live camera feed with the prediction\n",
-        "    cv2.imshow('Live Camera Feed', frame)\n",
-        "\n",
-        "    # Break the loop if 'q' is pressed\n",
-        "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-        "        break\n",
-        "\n",
-        "# Release the camera and close all OpenCV windows\n",
-        "cap.release()\n",
-        "cv2.destroyAllWindows()\n"
+        "finally:\n",
+        "    # When everything done, release the capture\n",
+        "    cap.release()\n",
+        "    cv2.destroyAllWindows()"
       ],
       "metadata": {
         "colab": {
